acid/k8s/jenkins/jenkins-service.yaml
# CHANGEMENT PORTABILITÉ :
# - Annotation cloud.google.com/backend-config supprimée
# Pour rollback, remettre l'annotation si besoin.
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  type: ClusterIP
  selector:
    app: jenkins
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: agent
      port: 50000
      targetPort: 50000
# FIN CHANGEMENT PORTABILITÉ
